--- a/web/css/public.css
+++ b/web/css/public.css
@@ -186,7 +186,7 @@ h3{
     color: #B5A072 !important;
 }
 
-.photo-link{
+.course-catalog .photo-link{
     border: 1px solid #FFF;
     padding: 5px;
 }
