--- a/web/css/form.css
+++ b/web/css/form.css
@@ -1,254 +1,261 @@
-.row{
-    clear: both;
-    color: #666666;
-    font-size: 12px;
-    margin-top: 10px;
-    position: relative;
+.row {
+	clear: both;
+	color: #666666;
+	font-size: 12px;
+	margin-top: 10px;
+	position: relative;
 }
 
-textarea{
-    line-height: 23px !important;
-    color: #6B6B6B;
-    padding: 5px;
-    border: 1px solid #C0C0C0;    
-    font-size: 12px;
-    resize: none !important;
+textarea {
+	line-height: 23px !important;
+	color: #6B6B6B;
+	padding: 5px;
+	border: 1px solid #C0C0C0;
+	font-size: 12px;
+	resize: none !important;
 }
 
-input[type=button], input[type=submit] {
-    outline: 0;
-    padding: 0px 4px;
-    cursor: pointer;
-    border: none;
-    height: 25px;
-    height: 25px;
-    font-size: 11px;
+input[type=button],input[type=submit] {
+	outline: 0;
+	padding: 0px 4px;
+	cursor: pointer;
+	border: none;
+	height: 25px;
+	height: 25px;
+	font-size: 11px;
 }
 
-.sf_admin_action_join_group input,
-.sf_admin_action_edit_membership input{
-    background-color: #DDBA0C !important;
+.sf_admin_action_join_group input,.sf_admin_action_edit_membership input
+	{
+	background-color: #DDBA0C !important;
 }
 
-.sf_admin_form_action_delete input[type=button], .delete{
-    background-color: #B5A072;
-    color: #FFF !important;
+.sf_admin_form_action_delete input[type=button],.delete {
+	background-color: #B5A072;
+	color: #FFF !important;
 }
 
-input[type="text"], input[type="password"]{
-    color: #6B6B6B;
-    min-width: 325px;
-    border: 1px solid #DFDFDF;
-    background: white;
-    padding: 3px 5px;
-    outline: 0;
+input[type="text"],input[type="password"] {
+	color: #6B6B6B;
+	min-width: 325px;
+	border: 1px solid #DFDFDF;
+	background: white;
+	padding: 3px 5px;
+	outline: 0;
 }
 
-input[type="password"]:focus, input[type="text"]:focus, textarea:focus{
-    border: 1px solid #B5A072;
-    outline: medium none;
+input[type="password"]:focus,input[type="text"]:focus,textarea:focus {
+	border: 1px solid #B5A072;
+	outline: medium none;
 }
 
-.errors input, .errors textarea{
-    border: 1px solid #CD0A0A !important;
-    outline: medium none;
+.errors input,.errors textarea {
+	border: 1px solid #CD0A0A !important;
+	outline: medium none;
 }
 
-.button-edit, .button-remove, .button-view{
-    border-radius: 2px;
-    height: 20px !important;
-    cursor: pointer;
-    border: none !important;
-    font-size: 10px !important;
-    color: #FFF !important;
-    padding: 0px 3px !important;
-    text-align: center;
+.button-edit,.button-remove,.button-view {
+	border-radius: 2px;
+	height: 20px !important;
+	cursor: pointer;
+	border: none !important;
+	font-size: 10px !important;
+	color: #FFF !important;
+	padding: 0px 3px !important;
+	text-align: center;
 }
 
-input.button-edit, input.button-remove, input.button-view{
-    line-height: 15px !important;
+input.button-edit,input.button-remove,input.button-view {
+	line-height: 15px !important;
 }
 
-a.button-edit, a.button-remove, a.button-view{
-    display: inline-block;
-    margin-top: 1px;
+a.button-edit,a.button-remove,a.button-view {
+	display: inline-block;
+	margin-top: 1px;
 }
 
-.button-edit, .button-view{
-    background: #B5A072;
-    width: 55px;
+.button-edit,.button-view {
+	background: #B5A072;
+	width: 55px;
 }
 
-.button-remove{
-    background: #C00;
-    width: 55px;
+.button-remove {
+	background: #C00;
+	width: 55px;
 }
 
-.enroll-student{
-    margin-bottom: 10px;
+.enroll-student {
+	margin-bottom: 10px;
 }
 
-.save, .new, .button{
-    background-color: #B5A072;
-    color: #FFF !important;
-    padding: 2px 10px 3px;
+.save,.new,.button {
+	background-color: #B5A072;
+	color: #FFF !important;
+	padding: 2px 10px 3px;
 }
 
-.sign-up{
-    background-color: #DDBA0C !important;  
+.sign-up {
+	background-color: #DDBA0C !important;
 }
 
-.cancel, .done, .fc-header .fc-button, #calnext, #calprev{
-    background-color: #B5A072;
-    color: #FFF !important;
-    padding: 2px 10px 3px;
+.cancel,.done,.fc-header .fc-button,#calnext,#calprev {
+	background-color: #B5A072;
+	color: #FFF !important;
+	padding: 2px 10px 3px;
 }
 
-select{
-    width: 337px;
-    height: 27px;
+.delete {
+	background-color: #B94A48;
+	color: #FFF !important;
+	padding: 2px 10px 3px;
 }
 
-select[size], select[multiple], select[size][multiple] {
-    -moz-appearance: listbox;
-    appearance: listbox;
-    width: 240px;
-    height: 150px !important;
+.delete a{
+	color: #FFF !important;
+	font-size: 11px !important;
 }
 
-select > option{
-    padding: 3px;
+select {
+	width: 337px;
+	height: 27px;
 }
 
-.row label{
-    font-size: 13px;
+select[size],select[multiple],select[size][multiple] {
+	-moz-appearance: listbox;
+	appearance: listbox;
+	width: 240px;
+	height: 150px !important;
 }
 
-fieldset textarea{
-    width: 687px;
-    height: 60px;
+select>option {
+	padding: 3px;
 }
 
-#cboxLoadedContentInner textarea{
-    min-width: 300px;
-    width: 325px !important;
+.row label {
+	font-size: 13px;
 }
 
-#cboxLoadedContentInner input[type="text"],
-#cboxLoadedContentInner input[type="password"]{
-    min-width: 325px !important;
-    width: 325px;
+fieldset textarea {
+	width: 687px;
+	height: 60px;
 }
 
-.date-field{
-    width: 103px !important;
+#cboxLoadedContentInner textarea {
+	min-width: 300px;
+	width: 325px !important;
 }
 
-#profile_permission_form_holder .sf_admin_form_row label,
-#profile_group_form_holder .sf_admin_form_row label,
-#student_form_holder .sf_admin_form_row label,
-#instructor_form_holder .sf_admin_form_row label{
-    float: none !important;
+#cboxLoadedContentInner input[type="text"],#cboxLoadedContentInner input[type="password"]
+	{
+	min-width: 325px !important;
+	width: 325px;
 }
 
-.checkbox_list{
-    margin-left: 10px;
+.date-field {
+	width: 103px !important;
 }
 
-.checkbox_list label{
-    position: absolute;
-    left: 20px;
-    top: -1px;
-    width: 341px !important;
+#profile_permission_form_holder .sf_admin_form_row label,#profile_group_form_holder .sf_admin_form_row label,#student_form_holder .sf_admin_form_row label,#instructor_form_holder .sf_admin_form_row label
+	{
+	float: none !important;
 }
 
-.enroll{
-    color: #FFF !important;
-    cursor: pointer;
+.checkbox_list {
+	margin-left: 10px;
 }
 
-.button-box-blue{
-    border: 1px solid #337883;
+.checkbox_list label {
+	position: absolute;
+	left: 20px;
+	top: -1px;
+	width: 341px !important;
 }
 
-.button-box-brown{
-    border: 1px solid #B5A072;
+.enroll {
+	color: #FFF !important;
+	cursor: pointer;
 }
 
-.button-box-open{
-    border: 1px solid #B5A072;
+.button-box-blue {
+	border: 1px solid #337883;
 }
 
-.button-box-peered, .button-box-enter{
-    border: 1px solid #037D52;
+.button-box-brown {
+	border: 1px solid #B5A072;
 }
 
-.button-box-invited, .button-box-enroll{
-    border: 1px solid #DDBA0C;
+.button-box-open {
+	border: 1px solid #B5A072;
 }
 
-.button-box-accept{
-    border: 1px solid #909;
+.button-box-peered,.button-box-enter {
+	border: 1px solid #037D52;
 }
 
-.enter{
-    background-color: #037D52
+.button-box-invited,.button-box-enroll {
+	border: 1px solid #DDBA0C;
 }
 
-.unregister{
+.button-box-accept {
+	border: 1px solid #909;
+}
+
+.enter {
+	background-color: #037D52
+}
+
+.unregister {
 	background-color: #60A4E7;
 }
 
-.button-box-unregister{
-    border: 1px solid #60A4E7;
+.button-box-unregister {
+	border: 1px solid #60A4E7;
 }
 
-.button-box-open, .button-box-invited, .button-box-enter,
-.button-box-blue, .button-box-brown, .button-box-peered,
-.button-box-enroll, .button-box-accept, .button-box-unregister{
-    border-radius: 2px;
-    margin: 10px 10px 0 0;
-    padding: 1px;
-    height: 20px !important;
-    display: inline-block;
+.button-box-open,.button-box-invited,.button-box-enter,.button-box-blue,.button-box-brown,.button-box-peered,.button-box-enroll,.button-box-accept,.button-box-unregister
+	{
+	border-radius: 2px;
+	margin: 10px 10px 0 0;
+	padding: 1px;
+	height: 20px !important;
+	display: inline-block;
 }
 
-.peer-peered, .peer-open, .peer-suggested,
-.peer-declined, .enter, .peer-invited,
-.peer-accept, .unregister{
-    line-height: 15px !important;
-    height: 20px !important;
-    width: 70px !important;
-    color: #FFF !important;
-    font-size: 11px;
+.peer-peered,.peer-open,.peer-suggested,.peer-declined,.enter,.peer-invited,.peer-accept,.unregister
+	{
+	line-height: 15px !important;
+	height: 20px !important;
+	width: 70px !important;
+	color: #FFF !important;
+	font-size: 11px;
 }
 
-.peer-open{
-    background-color: #B5A072;  
+.peer-open {
+	background-color: #B5A072;
 }
 
-.peer-peered{
-    background-color: #037D52  
+.peer-peered {
+	background-color: #037D52
 }
 
-.peer-invited, .peer-accept, .enroll{
-    background-color: #DDBA0C;
+.peer-invited,.peer-accept,.enroll {
+	background-color: #DDBA0C;
 }
 
-.peer-accept{
-    background-color: #909;
+.peer-accept {
+	background-color: #909;
 }
 
-.peer-suggested{
-    background-color: #DDBA0C;
+.peer-suggested {
+	background-color: #DDBA0C;
 }
 
-.peer-invited, .peer-peered{
-    cursor: default !important;
+.peer-invited,.peer-peered {
+	cursor: default !important;
 }
 
-.peer-actions{
-    position: absolute;
-    top: 0px;
-    right: 0px;
+.peer-actions {
+	position: absolute;
+	top: 0px;
+	right: 0px;
 }
