Added new modules (error)

--- a/web/css/form.css
+++ b/web/css/form.css
@@ -80,7 +80,7 @@ a.button-edit,a.button-remove,a.button-view {
 }
 
 .button-remove {
-	background: #C00;
+	background: #B94A48;
 	width: 55px;
 }
 
