--- a/web/css/tutorplus.css
+++ b/web/css/tutorplus.css
@@ -1049,11 +1049,11 @@ ul.department-course,.section-block ul {
 	top: 42px;
 	display: none;
 	text-align: left;
-	border: 1px solid #B9B9B9;
+	border: 1px solid #F5F5F5;
 	background: #fff;
-	-webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-	-moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
 .profile-container {
