--- a/web/css/email_template.css
+++ b/web/css/email_template.css
@@ -2,13 +2,8 @@
 .sf_admin_form_field_from_name, .sf_admin_form_field_to_email,  .sf_admin_form_field_cc_email,
 .sf_admin_form_field_bcc_email, .sf_admin_form_field_reply_to, .sf_admin_form_field_credits, 
 .sf_admin_form_field_hours, .sf_admin_form_field_max_enrolled{
-    float: left;
-    width: 341px;
-}
-
-.sf_admin_form_field_description{
-    width: 100%;
-    float: left;
+    display: inline-block;
+    width: 337px;
 }
 
 .sf_admin_form_row {
