--- a/web/css/redactor.css
+++ b/web/css/redactor.css
@@ -49,7 +49,7 @@ body .redactor_box_fullscreen {
   margin: 0 !important;
   background: none;
   overflow: auto;
-  font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif !important;
+  font: 'Gotham SSm 4r', 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Helvetica, Segoe, 'Segoe UI', 'Segoe WP', Calibri, Arial, clean, sans-serif;
   font-size: 12px !important;
   white-space: normal;
 }
@@ -83,8 +83,8 @@ body .redactor_box_fullscreen {
   margin: 0 !important;
   margin-bottom: 15px !important;
   line-height: 1.45em !important;
-  font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif !important;
-  font-size: 15px !important;
+  font: 'Gotham SSm 4r', 'Gotham SSm A', 'Gotham SSm B', 'Helvetica Neue', Helvetica, Segoe, 'Segoe UI', 'Segoe WP', Calibri, Arial, clean, sans-serif;
+  font-size: 12px !important;
   border: none;
 }
 .redactor_editor iframe,
