--- a/web/css/auth.css
+++ b/web/css/auth.css
@@ -1,6 +1,18 @@
+#main-container {
+	padding-bottom: 0 !important;
+}
+
 #tp_admin_container {
 	margin-top: 25px !important;
 	padding: 0 !important;
+}
+
+#main-body {
+	padding-top: 30px !important;
+}
+
+#tp_admin_content {
+	margin-bottom: 70px;
 }
 
 .left-block {
@@ -18,22 +30,22 @@
 	background-color: #F1F1F1;
 }
 
-.sf_admin_boolean{
-    height: 32px;
+.sf_admin_boolean {
+	height: 32px;
 }
 
 #profile_sign_in_form_holder .sf_admin_boolean label {
-    position: absolute;
-    left: 20px;
-    top: 7px;
+	position: absolute;
+	left: 20px;
+	top: 7px;
 }
 
 #profile_sign_in_form_holder .sf_admin_boolean .content {
-    position: absolute;
-    left: 0;
-    top: 10px;
+	position: absolute;
+	left: 0;
+	top: 10px;
 }
 
-#sign-in, #request-password{
-    float: right;
+#sign-in,#request-password {
+	float: right;
 }
