--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -1,150 +1,175 @@
 #middle-column {
-  padding-top: 20px;
-  padding-bottom: 40px;
-  width: 940px;
-  margin-left: 0 !important;
+	padding-top: 0px !important;
 }
 
-.main-body{
-  padding-top: 10px !important;
+#main-body {
+	padding-top: 70px !important;
 }
 
 .my-peer {
-  height: 38px !important;
-  width: 40px !important;
-  display: inline-block;
-  float: none;
+	height: 38px !important;
+	width: 40px !important;
+	display: inline-block;
+	float: none;
 }
 
-#notifications, #my_courses, 
-#my_timeline, #news_items, 
-#announcements{
-  padding: 0 0 12px 0 !important;
-  border: 1px solid #F5F5F5;
+#notifications,#my_courses,#my_timeline,#news_items,#announcements {
+	padding: 0 0 12px 0 !important;
+	border: 1px solid #F5F5F5;
 }
 
-#my_peers{
-  border: 1px solid #F5F5F5;    
+#my_peers {
+	border: 1px solid #F5F5F5;
 }
 
-#my_messages{
-  text-align: center;
-  background-position: center 32px;
-  background-image: url("/images/icon_emails.png");
-  background-repeat: no-repeat;
-  height: 100px !important;
-  width: 438px;
-  border: 1px solid #F5F5F5;
+#my_messages {
+	text-align: center;
+	background-position: center 32px;
+	background-image: url("/images/icon_emails.png");
+	background-repeat: no-repeat;
+	height: 100px !important;
+	width: 438px;
+	border: 1px solid #F5F5F5;
 }
 
-#events{
-  text-align: center;
-  background-position: center 32px;
-  background-image: url("/images/icon_events.png");
-  background-repeat: no-repeat;
-  height: 100px !important;
-  width: 438px;
-  border: 1px solid #F5F5F5;
+#events {
+	text-align: center;
+	background-position: center 32px;
+	background-image: url("/images/icon_events.png");
+	background-repeat: no-repeat;
+	height: 100px !important;
+	width: 438px;
+	border: 1px solid #F5F5F5;
 }
 
-.view-more{
-  height: 40px;
-  width: 80px;
-  position: absolute;
-  top: 5px;
-  right: 0px;
+.view-more {
+	height: 40px;
+	width: 80px;
+	position: absolute;
+	top: 5px;
+	right: 0px;
 }
 
-.column-one, .column-two, .column-three{
-  display: inline-block;  
-  vertical-align: top;
-  margin-top: 20px;
-
+.column-one,.column-two,.column-three {
+	display: inline-block;
+	vertical-align: top;
 }
 
-.column-one{
-  width: 130px;
+.column-one {
+	width: 186px;
 }
 
-.column-one .row{
-  margin: 0 !important;
-  padding-top: 10px !important;
+.column-one .row {
+	margin: 0 !important;
+	padding-top: 10px !important;
 }
 
-.column-two{
-  width: 500px;  
-  margin-left: 10px;
+.column-two {
+	width: 353px;
 }
 
-.column-three{
-  margin-top: 50px !important;
-  margin-left: 10px;
-  width: 282px;
+.column-three {
+	margin-left: 10px;
+	width: 353px;
 }
 
-.messages, .events{
-  width: 130px;
-  color: #B5A072;
+.messages,.events {
+	width: 130px;
+	color: #B5A072;
 }
 
-.messages .caption, .events .caption{
-  width: 86px;
-  height: 40px;
-  display: inline-block;
+.messages .caption,.events .caption {
+	width: 86px;
+	height: 40px;
+	display: inline-block;
 }
 
-.messages a, .events a{
-  background: url(/images/messaging_events.png) no-repeat; 
-  text-indent: -9999px;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  overflow: hidden; 
+.messages a,.events a {
+	background: url(/images/messaging_events.png) no-repeat;
+	text-indent: -9999px;
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	overflow: hidden;
 }
 
-.messages a{
-  background-position: 1px 0;
+.messages a {
+	background-position: 1px 0;
 }
 
-.events a{
-  background-position: 1px -48px;
+.events a {
+	background-position: 1px -48px;
 }
 
-.timeline-row, .courses-row{
-  padding: 10px;
-  border-bottom: 1px solid #EEEEEF;
+.dashboard-peers {
+	padding: 10px 0;
 }
 
-.dashboard_peers{
-  padding: 10px 0; 
+a.jScrollArrowUp {
+	background: url(../images/basic_arrow_up.gif) repeat-x 0 0;
+}
+a.jScrollArrowUp:hover {
+	background-position: 0 -15px;
+}
+a.jScrollArrowDown {
+	background: url(../images/basic_arrow_down.gif) repeat-x 0 0;
+}
+a.jScrollArrowDown:hover {
+	background-position: 0 -15px;
+}
+a.jScrollActiveArrowButton, a.jScrollActiveArrowButton:hover {
+	background-position: 0 -30px;
 }
 
-.dashboard_peers a{
-  margin-bottom: 5px;
+.dashboard-peers a {
+	margin-bottom: 5px;
 }
 
-.timeline-row .heading{
-  max-height: 24px;
-  overflow: hidden;
+.timeline-row .heading {
+	max-height: 24px;
+	overflow: hidden;
 }
 
-#dashboard_suggested_peers .actions{
-  padding-top: 5px;
-  text-align: right;
+#dashboard_suggested_peers .actions {
+	padding-top: 5px;
+	text-align: right;
 }
 
-.suggested-peer{
-  clear: both;
-  position: relative;
+.suggested-peer {
+	clear: both;
+	position: relative;
 }
 
-.suggested-peer .button-box{
-  position: absolute;
-  right: 0px;
-  top: -5px;
+.suggested-peer .button-box-open,.suggested-peer .button-box-invited,.button-box-accept,.button-box-peered
+	{
+	margin: 5px 0 0 0;
+	position: absolute;
+	right: 37px;
+	top: -5px;
 }
 
-#dashboard-feeds .heading{
-    max-height: 44px !important;
-    height: 44px;
+.suggested-peer .button-box-decline {
+	margin: 5px 0 0 0;
+	position: absolute;
+	right: 7px;
+	top: -5px;
+}
+
+#dashboard-feeds .heading {
+	max-height: 44px !important;
+	height: 44px;
+}
+
+.message-inbox {
+	position: relative;
+}
+
+.dashboard-photo {
+	margin-bottom: 10px;
+	height: 138px;
+}
+
+.dashboard-photo .photo-link {
+	border: 1px solid #F1F1F1;
+	padding: 5px;
 }
