--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -130,10 +130,12 @@
   padding: 10px 10px;
   position: relative;
   display: block;
-  border: 1px solid #F5F5F5;
+  border-top: 1px solid #F5F5F5;
   margin: 0 0 10px 0;
   vertical-align: top;
-  background-color: #F5F5F5;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
 .snapshot h3{
